Fix images and styling
The only things left to do should be:
- Add Analytics (it's unclear if this is working)
- Ensure testing / deployment is working
- Fix minor styling issues (project links don't work + skills boxes look weird vertically)
- Update the bio, skills, and resume to reflect the last couple of years

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,8 +1,7 @@
 /* Global styles go here */
 
 body {
-  /* font-family: "Mulish", sans-serif; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1,
@@ -11,7 +10,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Bootstrap grid for 2k–4k screens */
